# kafka-avro-utility

./: .gitignore  Cargo.toml  FIELD_SPEC.md  README.md  field_spec.txt  fieldtest.txt  function_spec.txt  test.sh
examples/: fluctuate_demo.rs
schemas/: fieldtest.avsc  log_entry.avsc  master.avsc  person.avsc  table1.avsc  table10.avsc  table2.avsc  table3.avsc  table4.avsc  table5.avsc  table6.avsc  table7.avsc  table8.avsc  table9.avsc  test_template.avsc
src/: avrofile.rs  avrogen.rs  fastavrofile.rs  fastjsonfile.rs  fastprotofile.rs  fieldspec.rs  kafka_config.rs  lib.rs  main.rs  protofile.rs  protogen.rs
